On-going: GPAC 1.1-DEV
- support for LL-HLS (dashing, playback and server side)
- more support for MPEG-H audio mux/demux/dashing
- support for multiple filter chains per source in MP4Box dash or add syntax
- reworked mod-dirs and js-dirs usage, JSFilters now can be part of the default available filters
- added avgen counter generation
- support for HEIF item to sample data reference (no copy)
- DASHing now possible using inband cues (generated by flist filter)
- Python bindings for filter session
- Simple UI for vout to test seeking and speed modes
- Improved SmoothStreaming support
- Support for custom HAS adaptation algorithms (JS and Python)
- ROUTE muxer and support for low-latency ROUTE mux and demux
- VVC parsing, inspecting, mux and demux support (ISOBMFF and M2TS)
- VUI color info rewrite for AVC and HEVC (mp4box and bsrw filter)
- Improved colorspace support in rendering (OpenGL only)
- ISOBMFF Edit lists modification through MP4Box :edits and -edits
- Improved raw video in ISOBMFF support
- Filter TAG
- support for windows long path
- many bug fixes and security patches

10/09/2020: GPAC 1.0.1
This release fixes build and installation issues in 1.0.0, as well as various bugs introduced during the migration to the filters architecture.

It also adds several small features:
- better ttml import
- better support for MPEGH audio
- support fur DASH UTCTiming
- manifest generation from pre-fragmented DASH/HLS mp4
- speed optimization in isobmf reading (normal and fragmented)
- improved JS API for the filter session
- core tools exposed as JS module (file io, bitstream, etc ...)
- android fixes

16/06/2020: GPAC 1.0
 - Complete rewrite of GPAC streaming core:
    * addition of a filter-based architecture, used by MP4Client and MP4Box.
    * moving all decoders and demuxer plugins of MP4Client and most of MP4Box import/export code as filters for this new architecture,
    * moving DASH/HLS segmenter to a filter