@@ -1,11 +1,15 @@
 On-going: GPAC 1.1-DEV
 - support for LL-HLS (dashing, playback and server side)
+- support for various forwarding modes of DASH reader, allowing for example to encrypt/decrypt a live DASH/HLS session
+- support for IFF grid creation
+- tile splitting now available as a filter 
+- playback improvements for SRD (HEVC tiling and independent streams)
 - more support for MPEG-H audio mux/demux/dashing
 - support for multiple filter chains per source in MP4Box dash or add syntax
 - reworked mod-dirs and js-dirs usage, JSFilters now can be part of the default available filters
 - added avgen counter generation
 - support for HEIF item to sample data reference (no copy)
-- DASHing now possible using inband cues (generated by flist filter)
+- DASHing now possible using inband cues (generated by flist and dashin filters)
 - Python bindings for filter session
 - Simple UI for vout to test seeking and speed modes
 - Improved SmoothStreaming support
